[tool.poetry]
name = "dimo"
version = "0.1.0"
description = "Digital Archive Management Tools"
authors = ["Henry Meen <henrycmeen@me.com>"]
readme = "README.md"
packages = [{include = "dimo"}]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.9.0"

[tool.poetry.scripts]
dimo = "dimo.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"